# google-ai-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
google-ai-rs/: .LICENSE.swp  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs
google-ai-rs/src/: auth.rs  chat.rs  client.rs  content.rs  embedding.rs  error.rs  genai.rs  lib.rs  main.rs  schema.rs
google-ai-rs/src/proto/: attribution_source_id.rs  cache_service_client.rs  cache_service_server.rs  cached_content.rs  candidate.rs  chunk.rs  chunk_data.rs  code_execution_result.rs  condition.rs  content_filter.rs  custom_metadata.rs  dataset.rs  dynamic_retrieval_config.rs  executable_code.rs  file.rs  file_service_client.rs  file_service_server.rs  function_calling_config.rs  generate_answer_request.rs  generate_answer_response.rs  generate_content_response.rs  generation_config.rs  generative_service_client.rs  generative_service_server.rs  grounding_chunk.rs  hyperparameters.rs  logprobs_result.rs  mod.rs  model_service_client.rs  model_service_server.rs  part.rs  safety_rating.rs  safety_setting.rs  split.py  tool.rs  tuned_model.rs  tuning_example.rs  voice_config.rs
google-ai-rs/src/proto/longrunning/: mod.rs
google-ai-rs/tests/: live_tests.rs
google-ai-schema-derive/: Cargo.toml  README.md
google-ai-schema-derive/src/: attr.rs  lib.rs  schema.rs  serde_support.rs
schema-derive/: Cargo.toml
schema-derive/src/: attr.rs  lib.rs
