[package]
name = "google-ai-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Victor <victorayo206@example.com>"]
description = "Type-safe Rust client for Google's Generative AI APIs"
repository = "https://github.com/veecore/google-ai-rs"
documentation = "https://docs.rs/google-ai-rs"
keywords = ["google-ai", "gemini", "llm", "generative-ai"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
thiserror = "2.0.12"
tonic = { version = "0.12.3", features = ["tls", "tls-native-roots"] }
prost = "0.13"
prost-types = "0.13.5"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "time"] }
rsa = { version = "0.9.8", features = ["sha2"] }
sha2 = { version = "0.10.8", features = ["oid"] }
pem = "3.0.5"
base64 = "0.22.1"
rand = "0.8"
serde = { version = "1.0.219" , features = ["derive"] }
serde_json = { version = "1.0.140" }
google-ai-schema-derive = "0.1.0"