[package]
name = "google-ai-rs"
version = "0.1.4"
edition = "2021"
license = "MIT"
authors = ["Victor <victorayo206@example.com>"]
description = "Type-safe Rust client for Google's Generative AI APIs"
repository = "https://github.com/veecore/google-ai-rs"
documentation = "https://docs.rs/google-ai-rs"
keywords = ["google-ai", "gemini", "llm", "generative-ai"]
categories = ["api-bindings", "web-programming"]
readme = "README.md"

[dependencies]
thiserror = "2.0.12"
tonic = { version = "0.14.0", package = "tonic-veecore", default-features = false, features = ["codegen"] }
prost = "0.14"
prost-types = "0.14.1"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "net", "fs", "io-util", "time"] }
google-ai-schema-derive = "0.1.2"

# --- Optional dependencies for the `jwt` feature ---
rsa = { version = "0.9.8", features = ["sha2"], optional = true }
sha2 = { version = "0.10.8", features = ["oid"], optional = true }
pem = { version = "3.0.5", optional = true }
base64 = { version = "0.22.1", optional = true }
rand = { version = "0.8", optional = true }

# --- Optional dependencies for the `serde` feature ---
serde = { version = "1.0" , features = ["derive"]}
serde_json = { version = "1.0.140", optional = true }

[features]
default = ["auth_update", "jwt", "tls-default"]
serde = ["serde_json"]
auth_update = []
jwt = ["rsa", "sha2", "pem", "base64", "rand", "serde_json"]

# gRPC + TLS feature sets
tls-ring = ["tonic/tls-ring"]
tls-aws-lc = ["tonic/tls-aws-lc"]
tls-native-roots = ["tonic/tls-native-roots"]
tls-webpki-roots = ["tonic/tls-webpki-roots"]

tls-default = ["tls-ring", "tls-native-roots"]
